# otus-axum

./: Cargo.toml  Readme.md  data.db  diesel.toml
examples/: requests.rs
migrations/001_house/: down.sql  up.sql
src/: handlers.rs  lib.rs  main.rs  models.rs  schema.rs
tests/: requests.rs
