[package]
name = "otus-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13"
axum = "0.8.3"
tokio  = { version ="1.44.2", features = ["full"] }
dotenv = { version = "0.15.0" }
chrono = { version = "0.4" }

diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
diesel_migrations =  { version = "2.2.0", features = ["sqlite"] }