[package]
name = "otus-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio  = { version ="1.44.2", features = ["full"] }
tokio-rusqlite = { version = "0.6" }
dotenv = { version = "0.15.0" }
serde = { version = "1", features = ["derive"]}
serde_json = { version="1" }

diesel = { version = "2.2.0", features = ["sqlite", "r2d2" ] }
diesel_migrations =  { version = "2.2.0", features = ["sqlite"] }